--- a/src/AuthServer/AuthServer.vcxproj.filters
+++ b/src/AuthServer/AuthServer.vcxproj.filters
@@ -114,6 +114,9 @@
     <ClCompile Include="GameReport.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="GameTelnet.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AuthType.h">
@@ -222,6 +225,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="GameReport.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="GameTelnet.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
